[gd_scene load_steps=4 format=3 uid="uid://o876m5rws4vv"]

[ext_resource type="FontVariation" uid="uid://b0a54gmcbob6m" path="res://fonts/Menu.tres" id="1_evqkl"]
[ext_resource type="Script" path="res://scripts/pop_upScript.gd" id="1_reugd"]
[ext_resource type="Texture2D" uid="uid://dspp44gjkge8g" path="res://Assets/fondo_pop_up.png" id="2_vox8n"]

[node name="pop_up" type="Node2D"]
script = ExtResource("1_reugd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 88.0
offset_top = 40.0
offset_right = 232.0
offset_bottom = 112.0
color = Color(0.439216, 0.439216, 0.439216, 1)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(72, 36)
texture = ExtResource("2_vox8n")

[node name="LabelDia" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 134.0
offset_bottom = 24.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
text = "DIA: -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTemperatura" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 130.0
offset_bottom = 40.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 10
text = "Temperatura media
-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelHumedad" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 202.0
offset_bottom = 49.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 10
text = "Humedad media
-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSeismos" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 34.0
offset_right = 122.0
offset_bottom = 59.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 8
text = "Se√≠smos: -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LableInncedios" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 48.0
offset_right = 122.0
offset_bottom = 73.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 8
text = "Incendios: -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelFugas" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 41.0
offset_right = 122.0
offset_bottom = 66.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 8
text = "Fugas gas: -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 124.0
offset_top = 62.0
offset_right = 205.0
offset_bottom = 93.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("1_evqkl")
theme_override_font_sizes/font_size = 13
text = "cerrar"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
